# Matters

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  sbom.json
.flowguard/: adoption_log.jsonl  project.toml
.flowguard/behavior_commitment_ledger/: ledger.json  model.py  run_checks.py
docs/: flowguard_adoption_log.md  flowguard_behavior_commitment_ledger.md  flowguard_model_mesh.md  flowguard_suite_disposition.md  model-derived-code-structure.md  task-evidence-audit-2026-07-20.md  test-mesh.md
docs/product/: non-goals.md
docs/providers/: jira-discovery-plan.md
docs/security/: data-classification.md  public-boundary.md  public-file-policy.json  required-public-inventory.json  (+1 more)
flowguard_design/: __init__.py  architecture.py  commitments.py  contract_exhaustion.py  field_lifecycle.py  inventory.py  model_test_alignment.py  run_alignment.py  run_existing_model_preflight.py  run_g4_review.py  run_g8_review.py  run_test_mesh.py  run_ui_flow_structure.py  synthetic_jira.py  synthetic_sources.py  test_mesh.py  transition_coverage.py  ui_flow_structure.py  ui_runtime_contract.py  ui_runtime_required_checks.json
flowguard_models/: README.md  __init__.py  agent_operation_models.py  delivery_flow.py  harness.py  model_mesh.py  run_agent_operation_model.py  run_delivery_flow.py  run_mesh.py  run_model.py  run_skill_runtime_model.py  skill_runtime_mesh.py
plugin/: matters-plugin.json
scripts/: audit_gmail_page_chain.py  audit_gmail_runtime.py  build_desktop_manifest.py  build_desktop_package.ps1  build_desktop_release_archive.py  build_desktop_toolchain.py  build_private_aggregate.py  capture_gmail_search_chain.js  check_public_boundary.py  ingest_gmail_export.py  ingest_gmail_pages.py  install_desktop_package.ps1  install_local.ps1  jira_slice_preflight.py  matters_desktop_entry.py  rebase_autonomy_ledger.py  rebuild_private_source_catalog.py  reclassify_private_inventory.py  retire_gmail_pseudo_thread.py  run_partitioned_private_first_run.py  run_private_first_run.py  seed_ui_validation.py  summarize_gmail_verified_coverage.py  update_behavior_evidence.py  verify_live_ui.js
synthetic_fixtures/: README.md
tests/: conftest.py  test_ai_gateway.py  test_analysis_operations_depth.py  test_autonomous_maintenance.py  test_bundled_skill_pack.py  test_bundled_skill_pack_contracts.py  test_codex_provider.py  test_contract_rebase_and_global_recall.py  test_coverage_audit.py  test_current_scope_reconciliation.py  test_desktop.py  test_desktop_manifest.py  test_desktop_package_contract.py  test_durable_work_recompute.py  test_entrypoint_cli.py  test_entrypoint_http.py  test_entrypoint_mcp.py  test_entrypoint_real_service.py  test_entrypoint_ui.py  test_execution_profiles.py  test_generated_hero.py  test_gmail_body_continuation.py  test_gmail_ingest_safety.py  test_gmail_manifest_coverage_audit.py  test_install_local_transaction.py  test_inventory_policy_rebase.py  test_localization_registry.py  test_maintenance_orchestration.py  test_matter_activity.py  test_matter_hierarchy.py  test_matter_hierarchy_stress.py  test_matter_presentation_reconciliation.py  test_matter_reconciliation.py  test_matter_semantic_depth.py  test_mcp_stdio.py  test_object_browser_autonomy.py  test_object_browser_catalog_query.py  test_partitioned_filesystem_runner.py  test_private_aggregate.py  test_public_evidence_generators.py  (+45 more)
ui/: app.js  index.html  styles.css
(+317 files in other folders)
